=====================
Django MPTT CHANGELOG
=====================

Tue 1st Jan, 2008
-----------------

* Extracted logic for turning a ``Model`` instance which is the root
  node of a tree into a child of a given parent node in another tree from
  ``mptt.signals.pre_save`` into the ``make_child_node`` method in
  ``TreeManager``.

* Extracted logic for turning a ``Model`` instance which is a child node
  into the root node of a new tree from ``mptt.signals.pre_save`` into
  the ``make_root_node`` method in ``TreeManager``.

* Removed ``mptt.signals._get_next_tree_id``; added a
  ``get_next_tree_id`` method to ``TreeManager`` to replace it.

* Extracted some similar space-management queries out into the
  ``close_gap`` and ``create_space`` methods in ``TreeManager``.

* Implemented reparenting when a child node is assigned a different
  parent in the same tree.

* Implemented reparenting when a child node is assigned a parent in a
  different tree.

Mon 31st Dec, 2007
------------------

* Implemented reparenting when a root node is transformed into a child
  node by being assigned a parent.

Sun 30th Dec, 2007
------------------

* Implemented reparenting when a model instance is transformed into a
  root node by having its parent removed.

* Added tests for creation, model instance methods and deletion.

* Added a ``get_siblings`` method to model instances.